Added exception handling and added put and delete methods